--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -8,7 +8,9 @@
     </div>
     {% endif %}
     <h2>{{ post.title }}</h2>
-    <img src="{{ post.image.url }}" alt="Obrazek" width="100%">
+    {% if post.image %}
+        <img src="{{ post.image.url }}" alt="Obrazek" width="100%">
+    {% endif %}
     <p>{{ post.text|linebreaksbr }}</p>
 </div>
 {% endblock %}
