--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -12,7 +12,7 @@
     {% endif %}
     <h2>{{ post.title }}</h2>
     {% if post.image %}
-    <img src="{{ post.image.url }}" alt="Obrazek" width="100%">
+    <a href="{% url 'image_fullscreen' pk=post.pk %}"><img src="{{ post.image.url }}" alt="Obrazek" width="100%"></a>
     {% endif %}
     <p>{{ post.text|linebreaksbr }}</p>
 </div>
