upgrade layautu wyglądu

--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,9 +1,10 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-<h2>Nowy post</h2>
-<form method="post" enctype="multipart/form-data" class="post-form">{% csrf_token %}
-{{ form.as_p }}
-    <button type="submit" class="save btn btn-default">Zapisz</button>
-</form>
-{%  endblock %}
+    <h2>Dodaj/Edytuj post</h2>
+    <form method="POST" enctype="multipart/form-data" class="post-form">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="save btn btn-primary">ZAPISZ</button>
+    </form>
+{% endblock %}
