--- a/blog/templates/blog/image_display.html
+++ b/blog/templates/blog/image_display.html
@@ -1,3 +1,7 @@
 {% load static %}
+<html>
 
-<img src="{{ post.image.url }}" alt="Obrazek" width="250px">
+<body>
+<img src="{{ post.image.url }}" class="img" alt="Obrazek" width="250px"><br/>
+</body>
+</html>
