--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,14 +3,14 @@
     {% block content %}
         {% for post in posts %}
         <div class="post">
-            <div class="data">
-                <p>opublikowany: {{ post.publish_date }}</p>
-            </div>
-            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2> 
             {% if post.image %}
-            <a href="{% url 'image_fullscreen' pk=post.pk %}"><img src="{{ post.image.url }}" alt="Obrazek" width="200px"></a>
+            <a href="{% url 'image_fullscreen' pk=post.pk %}"><img src="{{ post.image.url }}" class="img" alt="Obrazek" width="300px"></a><br/>
             {% endif %}
-            <em>{{ post.text|linebreaksbr }}</em>
+            <div class="data">
+            <p>opublikowany: {{ post.publish_date }}</p>
+            </div><h2><b><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></b></h2>
+        <br/>    
+            <em>{{ post.text|linebreaksbr }}</em></div><br/>
         </div>
         {% endfor %}
     {% endblock %}
