--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,7 +9,8 @@
             <link rel="stylesheet" href="{% static 'css/blog.css' %}">
             <script src="https://use.fontawesome.com/451851369b.js"></script>
             <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-        </head>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+          </head>
 <body>
 <nav class="navbar navbar-light" style="background-color: #061A40;">
     <a class="top-menu" href="/">Facebook</a>
@@ -37,7 +38,7 @@
 </nav>
 <div class="content container">
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-8">
             {% block content %}
             {% endblock %}
         </div>
