--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,17 +1,15 @@
     {% extends 'blog/base.html' %}
 
     {% block content %}
-        {% for post in posts %}
+    {% for post in posts %}
         <div class="post">
             {% if post.image %}
             <a href="{% url 'image_fullscreen' pk=post.pk %}"><img src="{{ post.image.url }}" class="img" alt="Obrazek" width="300px"></a><br/>
             {% endif %}
             <div class="data">
             <p>opublikowany: {{ post.publish_date }}</p>
-            </div><h2><b><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></b></h2>
-        <br/>    
-            <em>{{ post.text|linebreaksbr }}</em></div><br/>
-        </div>
-        {% endfor %}
+            </div><h2><b><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></b></h2><br/>    
+            <em>{{ post.text|linebreaksbr }}</em></div><br/><br/><br/>   
+    {% endfor %}
     {% endblock %}
      
