--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -69,6 +69,7 @@ border-left:solid;
 }
 
 .post {
+    display:inline-block;
     margin-bottom: 15px;
     padding: 10px 10px 10px 1px;
     width: 850px;
