--- a/11 profesionalny layout (wyglad).css
+++ b/11 profesionalny layout (wyglad).css
@@ -17,14 +17,14 @@ margin-right: 55px;                     /* prawy margines 55 pikseli */
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #C25100;                   /* kolor dla headera(tytułu) h1 */
 }
-.gora{                                  /* klasa odpowiada za górną część naszej strony */
+.gora {                                 /* klasa odpowiada za górną część naszej strony */
   width:70%;                            /* szerokość 70% */
   border-bottom: solid;                 /* ramka na dole */
   border-width: 1px;                    /* szerokośc ramki 1 piksel */
   border-color:#f0f0f0;               /* kolor ramki */
 }
 
-.baner{                                 /* klasa dla zdjęcia na stronie głównej */
+.baner {                                 /* klasa dla zdjęcia na stronie głównej */
 width: 100%;                            /* szerokośc 100%(kontenera, w którym się znajduje) */
 border-radius: 10px;                    /* zaokrąglenie rogów */
 border-bottom:solid;                    /* ramka dolna */
@@ -38,6 +38,7 @@ border-left:solid;                      /* ramka lewa (razem z dolną ramką stw
 
 .img {                                  /* klasa dla zdjęć */
     margin: 25px;
+    margin-left: 0px;
     float: left;                        /* wyrównanie obrazu do lewej strony */
     border-radius: 10px;
 }
@@ -63,28 +64,30 @@ border-left:solid;                      /* ramka lewa (razem z dolną ramką stw
     padding: 10px 0;
 }
 
-.plus{                                  /* klas dla plusa(dodawanie postów) */
+.plus {                                 /* klas dla plusa(dodawanie postów) */
     float: right;
     margin-right: 20px;
 }
 
 .post {
+    display:inline-block;               /* wyświetli 1 post jako jeden blok- posty nie będą nachodziły na siebie (moja zmiana) */
     margin-bottom: 15px;
     padding: 10px 10px 10px 1px;
+    width: 850px;                       /* szerokośc posta w pikselach(moja zmiana)*/
 }
 
 .post h2 a, .post h1 a:visited {
     color: #061A40;
 }
 
-.nav-link{                              /* klasa obsługująca nawigację na stronie (menu 1 - zawartość)*/
+.nav-link {                              /* klasa obsługująca nawigację na stronie (menu 1 - zawartość)*/
     padding: 0px 0px 0px 78px;
     color: #061A40;
     font-family: 'Inter', sans-serif;
     text-decoration: none;
 }
 
-h2{
+h2 {
     font-family: 'Inter', sans-serif;
 }
 
@@ -95,85 +98,75 @@ h2{
     font-family: 'Inter', sans-serif;
 }
 
-.nav-link2{                             /* klasa obsługująca nawigację na stronie (menu 2 - media społ.)*/
+.nav-link2 {                             /* klasa obsługująca nawigację na stronie (menu 2 - media społ.)*/
     padding: 0px 70px 0px 11px;
     color: #C25100;
     font-family: 'Inter', sans-serif;
     font-size: 40px;
     text-decoration: none; 
 }
-.title{                                 /* klasa dla tytułu (blog dla programistów) */
+.title {                                 /* klasa dla tytułu (blog dla programistów) */
     font-size: 45px;
 }
 
-.stopka{                                /* klasa odpowiedzialna za dolną część strony */
+.stopka {                                /* klasa odpowiedzialna za dolną część strony */
     margin-top: 35px;
     width: 100%;
     padding: 10px;
     background-color: #061A40;
 }
 
-.site-footer{                           /* klasa sekcji .stopki - odstępy i czcionka */
+.site-footer {                           /* klasa sekcji .stopki - odstępy i czcionka */
     padding: 45px 0 20px;
     font-size: 13px;
     line-height: 24px;
     color: #ffffff;
 }
 
-.site-footer hr{                        /* klasa sekcji .stopki -  */
+.site-footer hr {                       /* klasa sekcji .stopki -  */
     border-top-color: #bbb;
     opacity: 0.5;                       /* opacity - z ang. nieprzezroczystość, ciemność */
 }
 
-.site-footer hr.small
-{
+.site-footer hr.small {
   margin:20px 0;
 }
-.site-footer h6
-{
+.site-footer h6 {
   color:#fff;
   font-size:16px;
   text-transform:uppercase;
   margin-top:5px;
   letter-spacing:2px;
 }
-.site-footer a                        /* klasa dla sekcji ancor */
-{
+.site-footer a {                       /* klasa dla sekcji ancor */
   color:#ffffff;;
 }
-.site-footer a:hover                  /* klasa dla sekcji ancor odwiedzony */
-{
+.site-footer a:hover {                 /* klasa dla sekcji ancor odwiedzony */
   color:#3366cc;
   text-decoration:none;
 }
-.footer-links
-{
+.footer-links {
   padding-left:0;
   list-style:none;
 }
-.footer-links li
-{
+.footer-links li {
   display:block;
 }
-.footer-links a
-{
+.footer-links a {
   color:#ffffff;
 }
-.footer-links a:active,.footer-links a:focus,.footer-links a:hover
-{
+.footer-links a:active,.footer-links a:focus,.footer-links a:hover {
   color:#3366cc;
   text-decoration:none;
 }
-.footer-links.inline li
-{
+.footer-links.inline li {
   display:inline-block;
 }
-.site-footer .social-icons
-{
+.site-footer .social-icons {
   text-align:right;                    /* wyrównanie tekstu do prawej */
 }
-.site-footer .social-icons a           /* klasa obiektu graficznego stworzonego w całości w css */
-{                                      /* będzie to małe kółko, w którym będą umieszczone loga socialmediów */
+.site-footer .social-icons a {         /* klasa obiektu graficznego stworzonego w całości w css */
+                                       /* będzie to małe kółko, w którym będą umieszczone loga socialmediów */
   width:40px;                     
   height:40px;
   line-height:40px;
@@ -182,51 +175,40 @@ h2{
   border-radius:100%;
   background-color:#33353d;
 }
-.copyright-text
-{
+.copyright-text {
   margin:0;
 }
-@media (max-width:991px)
-{
-  .site-footer [class^=col-]
-  {
+@media (max-width:991px) {
+  .site-footer [class^=col-] {
     margin-bottom:30px;
   }
 }
-@media (max-width:767px)
-{
-  .site-footer
-  {
+@media (max-width:767px) {
+  .site-footer {
     padding-bottom:0;
   }
-  .site-footer .copyright-text,.site-footer .social-icons
-  {
+  .site-footer .copyright-text,.site-footer .social-icons {
     text-align:center;
-
   }
 }
-.social-icons
-{
+.social-icons {
   padding-left:0;
   margin-bottom:0;
   list-style:none;
 }
-.social-icons li
-{
+.social-icons li {
   display:inline-block;
   margin-bottom:4px;
-
 }
 
-.social-icons li.title
-{
+.social-icons li.title {
   margin-right:15px;
   text-transform:uppercase;
   color:#96a2b2;
   font-weight:700;
   font-size:13px;
 }
-.social-icons a{
+.social-icons a {
   background-color:#eceeef;
   color:#818a91;
   font-size:13px;
@@ -241,39 +223,30 @@ h2{
   -o-transition:all .2s linear;
   transition:all .2s linear;
 }
-.social-icons a:active,.social-icons a:focus,.social-icons a:hover
-{
+.social-icons a:active,.social-icons a:focus,.social-icons a:hover {
   color:#fff;
   background-color:#29aafe;
 }
-.social-icons.size-sm a
-{
+.social-icons.size-sm a {
   line-height:34px;
   height:30px;
   width:34px;
   font-size:12px;
 }
-.social-icons a.facebook:hover
-{
+.social-icons a.facebook:hover {
   background-color:#3b5998;
-
 }
-.social-icons a.twitter:hover
-{
+.social-icons a.twitter:hover {
   background-color:#00aced;
 }
-.social-icons a.linkedin:hover
-{
+.social-icons a.linkedin:hover {
   background-color:#007bb6;
 }
-.social-icons a.dribbble:hover
-{
+.social-icons a.dribbble:hover {
   background-color:#ea4c89;
 }
-@media (max-width:767px)
-{
-  .social-icons li.title
-  {
+@media (max-width:767px) {
+  .social-icons li.title {
     display:block;
     margin-right:0;
     font-weight:600;
