--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -255,3 +255,10 @@ i{
 margin-top: 8px;
 }
 
+.img-fullscreen {
+  margin-left: 30px;
+  color: #ffffff; 
+  font-family: 'Inter', sans-serif;
+  text-decoration: none; 
+}
+
