--- a/blog/templates/blog/image_fullscreen.html
+++ b/blog/templates/blog/image_fullscreen.html
@@ -2,22 +2,21 @@
 <html lang="pl">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog dla programistów</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">   
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+            <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+            <script src="https://use.fontawesome.com/451851369b.js"></script>
+            <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>   
     </head>
 <body>
-    <div class="page-header">
-        {% if user.is_authenticated %}  
-        <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-        {% endif %}
-        <h1><a href="/">Blog dla programistów</a></h1>
+    <div class="navbar navbar-light" style="background-color: #061A40">
+        <h1><a class="img-fullscreen" href="/">Blog dla programistów</a></h1><br/>
     </div>
     <div>
         <div>
-        <img src="{{ post.image.url }}" alt="Obrazek" width="100%">
+            <a href="{% url 'post_detail' pk=post.pk %}"><img src="{{ post.image.url }}" alt="Obrazek" width="100%">
         </div>
     </div>
 </body>
