--- a/blog/templates/blog/image_fullscreen.html
+++ b/blog/templates/blog/image_fullscreen.html
@@ -10,15 +10,15 @@
             <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>   
     </head>
-<body>
+<body> 
+ <div class="padding-fullscreenViev">
     <div class="navbar navbar-light" style="background-color: #061A40">
-        <h1><a class="img-fullscreen" href="/">Blog dla programistów</a></h1><br/>
+        <h1><a class="fullscreenViev" href="/">Blog dla programistów</a></h1><br/>
     </div>
     <div>
-        <div>
-            <a href="{% url 'post_detail' pk=post.pk %}"><img src="{{ post.image.url }}" alt="Obrazek" width="100%">
-        </div>
+        <a href="{% url 'post_detail' pk=post.pk %}"><img src="{{ post.image.url }}" class="imagefsv" alt="Obrazek" width="100%">
     </div>
+</div>
 </body>
 </html>
 
