--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,8 +11,8 @@
             <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
           </head>
-<body>
-<nav class="navbar navbar-light" style="background-color: #061A40;">
+<body class="padding-fullscreenViev" >
+<nav class="navbar navbar-light" style="background-color: #061A40; border-radius: 10px">
     <a class="top-menu" href="/">Facebook</a>
     <a class="top-menu" href="/">Twitter</a>
     <a class="top-menu" href="/">Youtube</a>
@@ -89,10 +89,11 @@
 
           <div class="col-md-4 col-sm-6 col-xs-12">
             <ul class="social-icons">
-              <li><a class="facebook" href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
-              <li><a class="twitter" href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
+              <li><a class="facebook" href="http://facebook.com"><i class="fa fa-facebook fa-2x"></i></a></li>
+              <li><a class="twitter" href="http://twitter.com"><i class="fa fa-twitter fa-2x"></i></a></li>
               <li><a class="dribbble" href="#"><i class="fa fa-dribbble fa-2x"></i></a></li>
               <li><a class="linkedin" href="#"><i class="fa fa-linkedin fa-2x"></i></a></li>
+              <li><a class="youtube" href="http://youtube.com"><i class="fa fa-youtube fa-2x"></i></a></li>
             </ul>
           </div>
         </div>
