--- a/blog/templates/blog/image_fullscreen.html
+++ b/blog/templates/blog/image_fullscreen.html
@@ -12,7 +12,7 @@
     </head>
 <body> 
  <div class="padding-fullscreenViev">
-    <div class="navbar navbar-light" style="background-color: #061A40">
+    <div class="navbar navbar-light" style="background-color: #061A40; border-radius: 10px" >
         <h1><a class="fullscreenViev" href="/">Blog dla programistów</a></h1><br/>
     </div>
     <div>
