--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -113,6 +113,7 @@ h2 {
     width: 100%;
     padding: 10px;
     background-color: #061A40;
+    border-radius: 10px;
 }
 
 .site-footer {
@@ -243,6 +244,9 @@ h2 {
 }
 .social-icons a.dribbble:hover {
   background-color:#ea4c89;
+}
+.social-icons a.youtube:hover {
+  background-color:#c70b0b;
 }
 @media (max-width:767px) {
   .social-icons li.title {
