--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -89,6 +89,7 @@
 
           <div class="col-md-4 col-sm-6 col-xs-12">
             <ul class="social-icons">
+              <li><a class="pinterest" href="http://pinterest.com"><i class="fa fa-pinterest fa-2x"></i></a></li>
               <li><a class="facebook" href="http://facebook.com"><i class="fa fa-facebook fa-2x"></i></a></li>
               <li><a class="twitter" href="http://twitter.com"><i class="fa fa-twitter fa-2x"></i></a></li>
               <li><a class="dribbble" href="#"><i class="fa fa-dribbble fa-2x"></i></a></li>
