--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base.html' %}
-
+{% load embed_video_tags %}
 {% block content %}
 <div class="post">
     {% if post.published_date %}
@@ -13,7 +13,8 @@
     <h2>{{ post.title }}</h2>
     {% if post.image %}
     <a href="{% url 'image_fullscreen' pk=post.pk %}"><img src="{{ post.image.url }}" class="img" alt="Obrazek" width="100%"></a>
-    {% endif %}
+    {% endif %}            
+    {% video post.url '850x700' %}
     <p>{{ post.text|linebreaksbr }}</p>
 </div>
 {% endblock %}
