--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,11 +1,15 @@
     {% extends 'blog/base.html' %}
-
+    {% load embed_video_tags %}
     {% block content %}
     {% for post in posts %}
         <div class="post">
             {% if post.image %}
             <a href="{% url 'image_fullscreen' pk=post.pk %}"><img src="{{ post.image.url }}" class="img" alt="Obrazek" width="300px"></a><br/>
-            {% endif %}
+            {% elif post.url %}
+            <div class="vid">       
+                {% video post.url '300x200' %}    
+            </div>    
+            {% endif %}           
             <div class="data">
             <p>opublikowany: {{ post.publish_date }}</p>
             </div><h2><b><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></b></h2><br/>    
